--- a/styles/style_registration.css
+++ b/styles/style_registration.css
@@ -1,6 +1,21 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
-.registrationCards h3{
+
+.ashish_ka_h3_type1{
+  position:relative;
+width: 160px;
+height: 26px;
+text-align:center;
+font-family: 'Rubik';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+/* identical to box height, or 160% */
+
+
+color: #474747;
+}
+.ashish_ka_h3_type2{
   position:relative;
 width: 160px;
 height: 26px;
@@ -14,14 +29,44 @@ line-height: 26px;
 
 
 color: #474747;
+text-align:center;padding-left:16px;
 }
-.registrationCards hr{
+.ashish_ka_h3_type3{
+  position:relative;
+width: 160px;
+height: 26px;
+
+font-family: 'Rubik';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+/* identical to box height, or 160% */
+
+text-align:center;padding-left:4px;
+color: #474747;
+}
+.paise{
+  position:relative;
+width: 160px;
+height: 26px;
+
+font-family: 'Rubik';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+/* identical to box height, or 160% */
+padding: 0;margin-left: 25px;
+
+color: #474747;
+}
+.hr-ka{
   border-radius: 0;
   border-style: solid;
   border-color: #F5F5DC;
 }
-
-.registrationCards {
+.ashish {
   background-color: #eee;
   font-family: "Poppins", sans-serif;
   display: flex;
@@ -29,10 +74,24 @@ color: #474747;
   align-items: center;
   min-height: 100vh;
 }
-.registrationCards .class-header{
+.class-header{
   color: #FFFFFF;
+  text-align:center;
+  margin-top: 15px;
 }
-.registrationCards .grid {
+.ashish_ka_h2{
+  text-align:left;letter-spacing:.07rem;margin-left: 15px;
+}
+
+
+
+
+
+
+
+
+
+.grid {
   border-radius: 0 30px 0 30px;
   display: grid;
   width: 114em;
@@ -41,7 +100,7 @@ color: #474747;
   align-items: start;
 }
 
-.registrationCards .grid-item {
+.grid-item {
   background-color: #fff;
 border-radius: 0 30px 0 30px;
   overflow: hidden;
@@ -50,7 +109,7 @@ border-radius: 0 30px 0 30px;
   transition: 0.2s;
 }
 
-.registrationCards .grid-item:hover {
+.grid-item:hover {
   transform: translateY(-0.5%);
   transform: translateX(0.5%);
   box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5);
@@ -58,18 +117,18 @@ border-radius: 0 30px 0 30px;
 
 
 
-.registrationCards .card-content {
+.card-content {
   padding: 0;
 }
 
-.registrationCards .card-header {
+.card-header {
   font-size: 3rem;
   font-weight: 500;
   color: #FFFFFF;
   margin-bottom: 1.5rem;
 }
 
-.registrationCards .card-text {
+.card-text {
   font-size: 1.6rem;
   letter-spacing: 0.1rem;
   line-height: 1.7;
@@ -77,7 +136,7 @@ border-radius: 0 30px 0 30px;
   margin-bottom: 2.5rem;
 }
 
-.registrationCards .card-btn {
+.card-btn {
   display: block;
   margin-left: 27%;
   width: 50%;
@@ -89,43 +148,46 @@ border-radius: 0 30px 0 30px;
   border-radius: 50px;
   border-color:#D9E3E3;
   border: 5px;
+;
+
   transition: 0.2s;
   cursor: pointer;
   letter-spacing: 0.1rem;
+  margin-bottom: 20px;
 }
 
-.registrationCards .card-btn span {
+.card-btn span {
   margin-left: 1rem;
   transition: 0.2s;
 }
 
-.registrationCards .card-btn:hover,
-.registrationCards .card-btn:active {
+.card-btn:hover,
+.card-btn:active {
   background-color: #c2cffc;
 }
 
-.registrationCards .card-btn:hover span,
-.registrationCards .card-btn:active span {
+.card-btn:hover span,
+.card-btn:active span {
   margin-left: 1.5rem;
     background-color: #E84C3D;
 }
 
 
-.registrationCards .Bird-container{
+.Bird-container{
   padding:0;
   border: 0;
-  margin: 0;
+margin: 0;
   padding: 15px;
   background-color: #123749;
   border-radius: 0 30px 0 30px;
 }
 
 @media only screen and (max-width: 60em) {
-  .registrationCards {
+  body {
     padding: 3rem;
   }
 
-  .registrationCards .grid {
+  .grid {
     grid-gap: 3rem;
   }
 }
